# STT-Cleaning-Setup

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  dataset_pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py
config/: config.example.yaml  config.yaml
data/: README.md
scripts/: setup_vllm.sh
src/dataset_pipeline/: __init__.py  chunker.py  cli.py  config.py  merger.py  pipeline.py  utils.py  validator.py
tests/: __init__.py  test_chunker.py  test_config.py  test_utils.py
